--- a/app/static/sass/_story_card.scss
+++ b/app/static/sass/_story_card.scss
@@ -3,7 +3,7 @@ div.top_story {
     border: 1px solid lighten($gray, 40%);
     padding: 30px 10px;
     margin-bottom: 15px;
-    @media (max-width: 1000px) {
+    @media (max-width: $laptop) {
         margin: 15px 0;
     }
     .dateline {
@@ -13,7 +13,7 @@ div.top_story {
         margin-top: 0;
         margin-bottom: 8px;
         line-height: 1.3em;
-        @media (max-width: 500px) {
+        @media (max-width: $phone) {
             font-size: 18px;
         }
         a {
@@ -44,7 +44,7 @@ div.top_story {
         font-weight: 300;
         color: lighten($black, 5%);
     }
-    @media (max-width: 500px) {
+    @media (max-width: $phone) {
         p {
             font-size: 14px;
         }
