--- a/app/static/sass/_vpr.scss
+++ b/app/static/sass/_vpr.scss
@@ -8,6 +8,9 @@ $blue: #307fe2;
 $percent: 3%;
 $btn-percent: 1%;
 $tablet: 768px;
+$phone: 500px;
+$laptop: 1000px;
+$big-screen: 1200px;
 
 
 a {
